--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
+    "recharts": "^2.15.2",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
