debug github action

--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Run SSH command with debug log
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
           port: 22
           script: |
             echo "✅ Kết nối SSH thành công!"
