--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.487.0",
+    "mapbox-gl": "^3.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "recharts": "^2.15.2",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
