--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.12.0",
     "react": "^19.0.0",
